2010-02-18  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::updateObjectInTree):
	fixed #1249 GUI freezes when filters are applied. The GUI would
	freeze for a few seconds every time user modified anything in rules
	if a filter was applied to the tree at the same time.
	SourceForge bug #2954501

	* ObjectManipulator.cpp (ObjectManipulator::contextMenuRequested):
	fixed #1255 context menu items "Lock" and "Unlock" are not updated
	after object is locked.

	* ProjectPanel_events.cpp (ProjectPanel::event): fixed #1253
	Locking an object in the tree causes GUI crash.

2010-02-18  vadim  <vadim@vk.crocodile.org>

	* FWWindow.cpp (FWWindow::FWWindow): fixed #1252 The "New
	Object"-Dialog is always opened up twice when pressing <CTRL>+<N>

	* FindObjectWidget.cpp (FindObjectWidget::_findAll): fixed #1250
	The Find-Dialog searches 'Deleted Objects'-library although it's
	not enabled in the preferences. Sourceforge bug #2954501

	* IPv4Dialog.cpp (IPv4Dialog::DNSlookup): fixed #1251 DNS-Lookups
	in Address-Objects don't work. Sourceforge bug #2954501

2010-02-17  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl.cpp (mirrorRule::processNext): fixes #1241
	"add mirror rule" checkbox for IOSACL. New feature: policy rule
	option "Add mirrored rule" (checkbox in the rule options dialog)
	makes policy compiler for IOS ACL automatically create a rule with
	mirrored source and destination addresses and service fields. This
	can be used to match "reply" packets using address and service
	parameters matched by this rule.  The action of the mirrored rule
	is the same as that of this one. Firewall Builder recognizes the
	following services and creates "mirrored" versions as follows:
	    - UDP service: mirrored service has source and destination port
	    ranges reversed
	    - TCP service: mirrored service has source and destination
	    port ranges reversed and "established" flag inverted.